--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,21 @@
-<p>home works!</p>
+<img src="logo.png" />
+
+<h2 class="description">
+  {{ "home.page.description" | translate }}
+</h2>
+
+<form ngSubmit="submit()">
+  <mat-form-field class="audio-input">
+    <mat-label>{{ "home.input.placeholder" | translate }}</mat-label>
+    <input matInput type="text" [(ngModel)]="code" name="code" />
+    <button
+      mat-button
+      matSuffix
+      mat-icon-button
+      aria-label="Search"
+      (click)="submit()"
+    >
+      <mat-icon>search</mat-icon>
+    </button>
+  </mat-form-field>
+</form>
