--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -4,3 +4,23 @@
   width: 100%;
   height: 100%;
 }
+
+.logo {
+  width: 169px;
+  height: auto;
+  margin: 0 auto;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.description {
+  text-align: center;
+}
+
+.audio-input {
+  width: 100%;
+}
