--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,11 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.container {
+  display: block;
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 0 8px;
+  position: relative;
+}
