Added styles for guide page,search and language selector

--- a/src/app/audio-guide/audio-guide.component.html
+++ b/src/app/audio-guide/audio-guide.component.html
@@ -16,7 +16,7 @@
 
 <div class="container">
   <mat-card class="exhibition">
-    <img mat-card-image [src]="exhibition.image" alt="" />
+    <img class="card-image" mat-card-image [src]="exhibition.image" alt="" />
     <mat-card-subtitle>{{ exhibition.author }}</mat-card-subtitle>
     <mat-card-title>{{ exhibition.title | translate }}</mat-card-title>
     <mat-card-content>
