--- a/src/app/language-selector/language-selector.component.html
+++ b/src/app/language-selector/language-selector.component.html
@@ -20,7 +20,7 @@
         {{ "exhibition.language.description" | translate }}
       </p>
 
-      <mat-form-field appearance="fill">
+      <mat-form-field class="full-width" appearance="fill">
         <mat-select
           [(value)]="selectedLanguage"
           (selectionChange)="change($event)"
