--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,3 +10,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   padding: 0 8px;
   position: relative;
 }
+
+.full-width {
+  width: 100%;
+}
