--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <img class="logo" src="/assets/logo.png" />
+  <img height="170" width="170" class="logo" src="assets/logo.png" />
 
   <h2 class="description">
     {{ "home.page.description" | translate }}
